Use pills for algorithm navigation

--- a/partials/headers/algorithmHeader.phtml
+++ b/partials/headers/algorithmHeader.phtml
@@ -2,7 +2,7 @@
 <?php if ($__aid): ?>
     <?php if ($__uid): ?>
         <!-- NAVIGATION MENU FOR ALGORITHMS -->
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-pills">
             <li role="presentation"<?php if (ACTION == 'view'): ?> class="active"<?php endif ?>>
                 <a href="<?= url(['action' => 'view', 'aid' => $__aid]) ?>">
                     <?= $l10n['view'] ?>
