Basic function calling (without arguments)

--- a/css/common.less
+++ b/css/common.less
@@ -4,7 +4,7 @@
  * and licensed under the GNU GENERAL PUBLIC LICENSE Version 3
  * https://gnu.org/licenses/gpl-3.0.txt
  */
-.panel-heading {
+.panel-heading, a {
   cursor: pointer;
 }
 
