--- a/css/view.less
+++ b/css/view.less
@@ -42,20 +42,20 @@
 
 .controls {
   text-align: center;
-  #returnValue {
+  .return-value {
     text-align: center;
     font-weight: bold;
   }
-  #speed-control {
+  .speed-control {
     margin: 10px auto;
   }
-  #speed-slider {
+  .speed-slider {
     margin: auto 10px;
     .ui-slider-handle {
       margin-left: -9px;
     }
   }
-  #step-control {
+  .step-control {
     .icon {
       padding: 2px 10px;
     }
@@ -128,17 +128,14 @@
 }
 
 .statistics {
+  .lbl-stats {
+    width: 100%;
+  }
+
   .statistic {
     max-width: 100px;
     float: right;
   }
-}
-
-iframe {
-  border: none;
-  width: 100%;
-  height: 100%;
-  min-height: 720px;
 }
 
 .highlight-write {
