--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -258,7 +258,7 @@ require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
                     <div id="stepPanel" class="panel-collapse">
                         <div class="panel-body algorithm">
                             <ul class="node_root sortable" data-node-id="<?= $tree->getRoot() ?>">
-                                <?php $tree->printHtml(['vars' => $vars, 'mode' => 'edit', 'scope' => 0]) ?>
+                                <?php $tree->printHtml(['vars' => $vars, 'mode' => 'edit']) ?>
                             </ul>
                         </div>
                         <div class="panel-body buttons">
@@ -324,7 +324,7 @@ require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
                                 </div>
                             </div>
 
-                            <ul style="display: none">
+                            <ul class="prototypes" style="display: none">
                                 <?php
                                 // prepare parameters for prototypes
                                 $params = [
