Library updates, small cosmetic tweaks

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -24,7 +24,7 @@
 
       table {
         border-collapse: separate;
-        padding: 1px 0 1px 1px;
+        padding: 1px 0 0 1px;
         text-align: left;
       }
 
