--- a/css/common.css
+++ b/css/common.css
@@ -4,60 +4,50 @@
  * and licensed under the GNU GENERAL PUBLIC LICENSE Version 3
  * https://gnu.org/licenses/gpl-3.0.txt
  */
-.panel-heading, a {
+.panel-heading,
+a {
   cursor: pointer;
 }
-
-.algorithms {
-  .name {
-    font-weight: bold;
-    font-variant: small-caps;
-  }
-
-  .properties {
-    font-size: small;
-    color: #8d8d8d;
-  }
-
-  .description {
-    font-size: small;
-  }
+.algorithms .name {
+  font-weight: bold;
+  font-variant: small-caps;
 }
-
+.algorithms .properties {
+  font-size: small;
+  color: #8d8d8d;
+}
+.algorithms .description {
+  font-size: small;
+}
 #saveSuccess {
   font-size: small;
   vertical-align: middle;
 }
-
 .panel-footer-sm {
   padding: 2px;
   font-size: x-small;
   text-align: left;
 }
-
 label {
   font-weight: normal;
   margin-bottom: 0;
 }
-
 textarea {
   resize: vertical;
   overflow: auto;
 }
-
 html {
   height: 100%;
-  body {
-    height: 100%;
-    .content-wrapper {
-      min-height: 100%;
-      margin: 0 auto -50px;
-    }
-
-    .footer, .footer-placeholder {
-      height: 50px;
-      margin: 0 auto;
-    }
-  }
 }
-
+html body {
+  height: 100%;
+}
+html body .content-wrapper {
+  min-height: 100%;
+  margin: 0 auto -50px;
+}
+html body .footer,
+html body .footer-placeholder {
+  height: 50px;
+  margin: 0 auto;
+}
