Function calls: many improvements
pre-load scopes
generate random numbers on scope-load
make maximum random number configurable
fixed bugs: replay functionality, sections

--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -105,6 +105,9 @@
       }
       &.if-node {
         .nodeStyle(@structure-color);
+        .if-condition, .if-body {
+          padding-bottom: 1px;
+        }
       }
       &.inc-node {
         .nodeStyle(@operations-color);
@@ -120,6 +123,9 @@
       }
       &.while-node {
         .nodeStyle(@structure-color);
+        .while-condition {
+          padding-bottom: 1px;
+        }
       }
     }
   }
